Fixed some over spacing problem

--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ body {
     width: 100%;
     max-width: 320px;
     height: 300px;
-    margin-top: 2rem;
+    margin-top: 1rem;
     padding: var(--gap);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.12);
     border-radius: 8px;
@@ -269,10 +269,12 @@ body {
 .second-brain-descriptions {
     line-height: 20px;
     opacity: var(--opacity);
+    margin-top: 1rem;
 }
 
 .second-brain-list {
     list-style-type: none;
+    margin-top: 1rem;
 }
 
 .second-brain-list li {
